update RoomType